# burgissApi

./: .gitignore  ReadMe.md  configTemplate.cfg  index.md  pyproject.toml  requirements.txt  requirementsDev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  tests.yml
burgissApi/: __init__.py  burgissApi.py
src/: __init__.py  burgissApi.py
src/burgissApiWrapper/: burgissApi.py
tests/: __init__.py  conftest.py  test.py  testBurgissAnalytics.py  testBurgissApiRequests.py  testDataTransformations.py  testTokenGen.py  test_burgissAnalytics.py  test_responses.py
