[metadata]
name = burgiss-api
version = 0.0.6
description = An api wrapper package for financial data provided by Burgiss
long_description = A package that makes it easy to make requests to the Burgiss API by simplifying the JWT token auth. Additional functionality includes data transformations.
author = Jared Fallt
author_email = fallt.jared@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages =
    burgissApiWrapper
install_requires =
    atomicwrites>=1.4.0
    attrs>=21.2.0
    certifi>=2021.5.30
    cffi>=1.14.6
    charset-normalizer>=2.0.4
    colorama>=0.4.4
    cryptography>=3.4.8
    idna>=3.2
    iniconfig>=1.1.1
    numpy>=1.21.2
    packaging>=21.0
    pandas>=1.3.3
    pluggy>=1.0.0
    py>=1.10.0
    pycparser>=2.20
    PyJWT>=2.1.0
    pyodbc>=4.0.32
    pyOpenSSL>=20.0.1
    pyparsing>=2.4.7
    python-dateutil>=2.8.2
    pytz>=2021.1
    requests>=2.26.0
    six>=1.16.0
    toml>=0.10.2
    urllib3>=1.26.6
package_dir=
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2.5
    mypy>=0.910
    flake>=4.0.1

[options.package_data]
burgissApiWrapper = py.typed

[flake8]
max-line-length = 160
